additional comments added

--- a/sparkinit1.ipynb
+++ b/sparkinit1.ipynb
@@ -78,7 +78,12 @@
    "id": "78eef0da-417a-4e56-83b8-725cc3957225",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#.read is a dataframereader for spark and .format(\"csv\") defines that the data in in csv form\n",
+    "#.schema() and .option() are subfunctions in the scope of spark\n",
+    "# header as true means that the first rowin csv is the header and can be ignored in data rows\n",
+    "#load readies the transformation part of spark"
+   ]
   },
   {
    "cell_type": "code",
@@ -92,6 +97,16 @@
     "        .option(\"path\",\"users_data.csv\")\\\n",
     "        .option(\"header\",\"true\")\\\n",
     "        .load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a221ed64-c157-4f93-98c5-196766b6c6e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#returns the schema of the given dataframe"
    ]
   },
   {
@@ -121,6 +136,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ed5dfdc4-63f9-4294-8b1f-43d134686641",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#returns the no of rows"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "6e24acf7-bf40-4844-a019-245864e6de70",
    "metadata": {},
@@ -138,6 +163,16 @@
    ],
    "source": [
     "people.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b01441c0-1bbc-409a-a4bb-d3db94a270d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#shows the rows atleast the top 20"
    ]
   },
   {
@@ -189,7 +224,9 @@
    "id": "d497e415-5a2d-4f85-8f38-8c0cecf7336e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n"
+   ]
   }
  ],
  "metadata": {
