df basics added

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -185,8 +185,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d497e415-5a2d-4f85-8f38-8c0cecf7336e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jojim\\anaconda3\\envs\\pyspark_env\\python.exe\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.executable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd4423c3-1255-4a96-b08a-6ce524727793",
    "metadata": {},
    "outputs": [],
    "source": []
