added more to df basics

--- a/DataFrameBasics.ipynb
+++ b/DataFrameBasics.ipynb
@@ -222,11 +222,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1ab4119e-a94c-42f1-bd5a-f6fbf4cb86fa",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-----+------------+-----------+\n",
+      "|gender|count|total salary|average age|\n",
+      "+------+-----+------------+-----------+\n",
+      "|  Male|    2|    170000.5|       38.5|\n",
+      "|Female|    2|    150001.0|       32.0|\n",
+      "+------+-----+------------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy(\"gender\").agg(count(\"*\").alias(\"count\"),\n",
+    "                        sum(\"salary\").alias(\"total salary\"),\n",
+    "                        avg(\"age\").alias(\"average age\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f8b577be-87b6-4c6b-8698-153b72a17c3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+---+------+--------+\n",
+      "|           name|age|gender|  salary|\n",
+      "+---------------+---+------+--------+\n",
+      "|    Emily Davis| 28|Female|82000.75|\n",
+      "|     John Smith| 32|  Male| 75000.5|\n",
+      "|   Sarah Wilson| 36|Female|68000.25|\n",
+      "|Michael Johnson| 45|  Male| 95000.0|\n",
+      "+---------------+---+------+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.sort(\"age\",ascending=True).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5ff292f1-a462-4455-bae2-93fbc474a45a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+---+------+-----+\n",
+      "|           name|age|gender|bonus|\n",
+      "+---------------+---+------+-----+\n",
+      "|     John Smith| 32|  Male| 1000|\n",
+      "|    Emily Davis| 28|Female| 1000|\n",
+      "|Michael Johnson| 45|  Male| 1000|\n",
+      "|   Sarah Wilson| 36|Female| 1000|\n",
+      "+---------------+---+------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.withColumn(\"bonus\",lit(1000)).drop(\"salary\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e8a542b4-5c60-4926-8c19-e5d8b1cc2d8c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+---+------+--------+\n",
+      "|           name|age|gender|  salary|\n",
+      "+---------------+---+------+--------+\n",
+      "|     John Smith| 32|  Male| 75000.5|\n",
+      "|    Emily Davis| 28|Female|82000.75|\n",
+      "|Michael Johnson| 45|  Male| 95000.0|\n",
+      "|   Sarah Wilson| 36|Female|68000.25|\n",
+      "+---------------+---+------+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0cfed869-057c-4651-8ee1-f3863b8ffdb1",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spark.stop()"
+   ]
   }
  ],
  "metadata": {
